# Chouten

./: .gitmodules  settings.gradle.kts
.fleet/: receipt.json
.github/workflows/: build.yml
RelayWASM/: build.gradle.kts
RelayWASM/src/androidDeviceTest/kotlin/com/inumaki/relaywasm/: ExampleInstrumentedTest.kt
RelayWASM/src/androidHostTest/kotlin/com/inumaki/relaywasm/: ExampleUnitTest.kt
RelayWASM/src/androidMain/kotlin/com/inumaki/relaywasm/: HtmlHost.kt  JNIBridge.kt  Platform.android.kt  WasmRuntime.android.kt
RelayWASM/src/commonMain/kotlin/com/inumaki/relaywasm/: LogManager.kt  Platform.kt  SettingsManager.kt  WasmRuntime.kt
RelayWASM/src/desktopMain/kotlin/com/inumaki/relaywasm/: HtmlHost.kt  JNIBridge.kt  Platform.desktop.kt  WasmRuntime.desktop.kt
RelayWASM/src/desktopMain/resources/: module_test.wasm
RelayWASM/src/iosMain/kotlin/com/inumaki/relaywasm/: Platform.ios.kt
RelayWASM/src/main/cpp/: CMakeLists.txt  RelayWASM.cpp  buildWasmDll.sh
RelayWASM/src/main/cpp/wasm3/: .gitignore  README.md
RelayWASM/src/main/cpp/wasm3/source/extensions/: m3_extensions.c
RelayWASM/src/main/cpp/wasm3/test/internal/: m3_test.c
RelayWASM/src/main/cpp/wasm_core/: wasm_core.cpp  wasm_core.h
RelayWASM/src/nativeMain/kotlin/com/inumaki/relaywasm/: Platform.native.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/cpp/: CMakeLists.txt  wasm3Wrapper.cpp
composeApp/src/androidMain/kotlin/ktor/: HttpClient.android.kt
composeApp/src/commonMain/assets/: common.js  module_test.wasm
composeApp/src/commonMain/kotlin/ktor/: HttpClient.kt
composeApp/src/commonMain/resources/res/drawable/: repo_regular.xml
composeApp/src/desktopMain/kotlin/ktor/: HttpClient.desktop.kt
composeApp/src/desktopMain/resources/: common.js
composeApp/src/iosMain/resources/: module.wasm
composeApp/src/nativeInterop/cinterop/: wasm3.def
composeApp/src/nativeMain/kotlin/ktor/: HttpClient.native.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
(+64 files in other folders)
